fix: link style

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link href="css/styles.css" rel="stylesheet" />
         <!-- Special alteration by Gabi-->
         <link href="css/special.css" rel="stylesheet" />
+        <link href="https://github.com/gabipz/portfolio/blob/master/css/special.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
