--- a/index.html
+++ b/index.html
@@ -106,8 +106,6 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Technology in Systems Analysis and Development</h3>
                             <div class="subheading mb-3">IFSP - Instituto Federal de Educação, Ciência e Tecnologia São Paulo</div>
-                            <!--<div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>-->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2019 - Current</span></div>
                     </div>
@@ -179,6 +177,16 @@
                         </div>
                         <div class="flex-shrink-1"><span class="text-primary"><img src="assets/img/virus.png" class="fig-covid" alt="Virus"></span></div>
                     </div>
+                    <br>
+                    <h3 class="mb-3">Web Development</h3>
+                    <!-- Enem - Codenation -->
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h4 class="mb-2"><a href="https://github.com/gabipz/Projeto-DW1A3" target="_blank">SAGe (FAPESP) website</a></h4>
+                            <p>This project was developed to fix the usability problems on the SAGe (FAPESP) website.</p>
+                        </div>
+                        <div class="flex-shrink-1"><span class="text-primary"><img src="assets/img/sage.png" class="fig-sage" alt="Sage icon"></span></div>
+                    </div>
                     <!-- Styles (because on github does not work 'special.css')-->
                     <style type="text/css">
                         a {
@@ -187,6 +195,10 @@
                         img.fig-portfolio, img.fig-covid {
                             width: 70%;
                             height: 70%;
+                        }
+                        img.fig-sage {
+                            width: 25%;
+                            height: 60%;
                         }
                     </style>
             </section>
