--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1S-bZ10qdTZIz9ldiaQkonU5kfdEE3TqT/view?usp=sharing" target="_blank">CV</a></li>
                     <!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>-->
@@ -50,19 +51,19 @@
                         <!--São Paulo - SP · Brazil · (11)98114-0129 ·-->
                         <a href="mailto:piovsuarez@gmail.com">piovsuarez@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a physicist, completing the final year of a master's degree and studying systems analysis and development. Passionate about science and knowledge, I am carrying out intensive studies in Data Analysis tools such as Python, Machine Learning, SQL, Power BI and Excel.</p>
+                    <p class="lead mb-5">I am a physicist, completing the final year of a master's degree and studying systems analysis and development. Passionate about science and knowledge, I am carrying out intensive studies in Data Analysis tools such as Python, Machine Learning, SQL, Power BI and Excel. And also, I am enjoying exploring the web development world.</p>
+
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/gabipz/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/gabipz" target="_blank"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="http://lattes.cnpq.br/0140832287623231" target="_blank"><img class="nfab fa-lattes" src="assets/img/lattes-white.png"></a>
-                        
+                        <!--<a class="social-icon" href="https://drive.google.com/file/d/1S-bZ10qdTZIz9ldiaQkonU5kfdEE3TqT/view?usp=sharing" target="_blank"><i>CV</i></a>-->
                         <style type="text/css">
                             .nfab {                               
                                 height: 2rem;
                                 width: 2rem;
                             }
                         </style>
-
                     </div>
                 </div>
             </section>
