fix: take off imgs

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             <h4 class="mb-2"><a href="https://github.com/gabipz/data-science-codenation/blob/master/00-enem-prediction-challenge" target="_blank">Codenation Enem Challange</a></h4>
                             <p>My proposed solution for the Codenation Data Science Challenge to enter the AceleraDev program. In this project, we had to predict the math grades of students who took the Brasilian National Exam (ENEM), using the other subjects grades to build up a Machine Learning model.</p>
                         </div>
-                        <div class="flex-shrink-1"><span class="text-primary"><img src="assets/img/enem.png" class="fig-portfolio" alt="Enem logo"></span></div>
+                        <!--<div class="flex-shrink-1"><span class="text-primary"><img src="assets/img/enem.png" class="fig-portfolio" alt="Enem logo"></span></div>-->
                     </div>
                     <br>
                     <!-- Covid - Coursera -->
@@ -176,7 +176,7 @@
                             <h4 class="mb-2"><a href="https://github.com/gabipz/ds-studies/tree/master/Covid-19-Data-Analysis_Coursera" target="_blank">COVID19 - Coursera</a></h4>
                             <p>This project is an introductory exercise to preprocess and merge datasets to calculate needed measures and prepare them for an Analysis. We had two datasets that were merged to see if there is any relationship between the spread of the virus in a country and how happy people are, living in that country.</p>
                         </div>
-                        <div class="flex-shrink-1"><span class="text-primary"><img src="assets/img/virus.png" class="fig-covid" alt="Virus"></span></div>
+                        <!--<div class="flex-shrink-1"><span class="text-primary"><img src="assets/img/virus.png" class="fig-covid" alt="Virus"></span></div>-->
                     </div>
                     <br>
                     <h3 class="mb-3">Web Development</h3>
@@ -186,7 +186,7 @@
                             <h4 class="mb-2"><a href="https://github.com/gabipz/Projeto-DW1A3" target="_blank">SAGe (FAPESP) website</a></h4>
                             <p>This project was developed to fix the usability problems on the SAGe (FAPESP) website.</p>
                         </div>
-                        <div class="flex-shrink-1"><span class="text-primary"><img src="assets/img/sage.png" class="fig-sage" alt="Sage icon"></span></div>
+                        <!--<div class="flex-shrink-1"><span class="text-primary"><img src="assets/img/sage.png" class="fig-sage" alt="Sage icon"></span></div>-->
                     </div>
                     <!-- Styles (because on github does not work 'special.css')-->
                     <style type="text/css">
