Add cv experience

--- a/index.html
+++ b/index.html
@@ -74,11 +74,35 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Machine Learning Engineer</h3>
+                            <div class="subheading mb-3">Creditas</div>
+                            <p></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2022 - Current</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Data Engineer</h3>
+                            <div class="subheading mb-3">Creditas</div>
+                            <p>Code development for ETL process flow (Apache Airflow, Python, Data Pipeline).</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2021 - April 2022</span></div>
+                    </div>
+                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Freelancer</h3>
+                            <div class="subheading mb-3">Nave Nove</div>
+                            <p>Front-end development of a responsive online platform optimized for the Positivo company.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2020 - January 2021</span></div>
+                    </div> -->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Masters Fellow</h3>
                             <div class="subheading mb-3">FAPESP - Fundação de Amparo à Pesquisa do Estado de São Paulo</div>
                             <p>Development of research on energy efficiency, public policies in the area of energy and relations between energy and climate change. Study of projections and reporting.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2019 - December 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
